# interpolation

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
cmake/: InterpolationConfig.cmake.in
include/Interpolation/: chebyshev_grid.hh  default.hh  generic_grid.hh  interpolation.hh
run/: CMakeLists.txt
src/: chebyshev_grid.cc  generic_grid.cc
tests/: CMakeLists.txt  test_chebyshev.cc  test_first_discr.cc  test_generic.cc
